# Compile_via_MLIR

./: .gitmodules  CMakeLists.txt  README.md
build-tools/cmake/: nisl_add_all_subdirs.cmake  nisl_cc_binary.cmake  nisl_cc_library.cmake  nisl_import_binary.cmake  nisl_llvm.cmake  nisl_tablegen_doc.cmake  nisl_tablegen_library.cmake
compiler/CodeGen/: CMakeLists.txt  CodeGenTools.cpp  CodeGenTools.h
compiler/CodeGen/CPU/: CMakeLists.txt  LLVMCPUCodeGenpass.cpp  Passes.cpp  Passes.h
compiler/CodeGen/GPU/: CMakeLists.txt  LLVMGPUCodeGenpass.cpp  Passes.cpp  Passes.h
compiler/Codegen/: CMakeLists.txt
compiler/Conversion/: CMakeLists.txt
compiler/Conversion/ConvertToLLVM/: CMakeLists.txt  Passes.cpp  Passes.h
compiler/Conversion/ConvertToMlirLLVM/: CMakeLists.txt  Passes.cpp  Passes.h
compiler/Conversion/TOSA/: CMakeLists.txt  PassDetail.h  Passes.cpp  Passes.h  Passes.td  eliminateEmptyTensors.cpp
compiler/Conversion/WarpEntryPoint/: CMakeLists.txt  Passes.cpp  Passes.h  WrapEntryPoints.cpp
compiler/InputConversion/: CMakeLists.txt
compiler/InputConversion/TOSA/: CMakeLists.txt  Passes.cpp  Passes.h
compiler/Pipelines/: CMakeLists.txt  Pipelines.cpp  Pipelines.h
compiler/Tools/: CMakeLists.txt  init_dialects.h  init_llvmir_translations.h  init_mlir_dialects.h  init_mlir_passes.h  init_passes.h  nisl_compile_lib.cc  nisl_compile_lib.h  nisl_opt_lib.cc  nisl_opt_lib.h
tests/: CMakeLists.txt  test.py
tests/gpu-module/: gpu-moudle.mlir
tests/tosa-mlir/: add_llvm_cpu_codegen.bc  add_llvm_cpu_codegen.ll  tosa-add.mlir
tools/: CMakeLists.txt  nisl-compile-main.cc  nisl-opt-main.cc
